# Cortex

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  models.md  pyproject.toml
.github/workflows/: ci.yml
cortex/: __init__.py  app.py
cortex/api/: routes.py  schemas.py
cortex/bus/: __init__.py  in_memory.py  interface.py
cortex/core/: __init__.py  commands.py  config.py  events.py  exceptions.py  ids.py
cortex/evaluation/: __init__.py  interface.py  models.py  rule_based.py
cortex/goals/: __init__.py  interface.py  manager.py  models.py
cortex/kernel/: __init__.py  kernel.py  lifecycle.py  policies.py  state.py
cortex/memory/: __init__.py  consolidation.py  episodic.py  interfaces.py  models.py  semantic.py  working.py
cortex/observability/: logging.py
cortex/planning/: __init__.py  interface.py  models.py  simple.py
cortex/reasoning/: __init__.py  fake.py  models.py  openrouter.py  provider.py
cortex/reflection/: __init__.py  interface.py  models.py  simple.py
cortex/tools/: __init__.py  echo.py  interface.py  models.py  registry.py
plans/: plan.md
tests/integration/: test_api.py
tests/unit/: test_foundation.py  test_kernel.py  test_reasoning_providers.py
