[tool.poetry]
name = "cortex"
version = "0.1.0"
description = "A small cognitive operating system foundation"
authors = ["Cortex Contributors"]
readme = "README.md"
packages = [{ include = "cortex" }]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
httpx = "^0.27.0"
structlog = "^24.4.0"
sqlalchemy = "^2.0.0"
asyncpg = { version = "^0.30.0", optional = true }
redis = { version = "^5.0.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
ruff = "^0.6.0"
mypy = "^1.11.0"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
